{
    "name": "PlayerBuildInput",
    "maps": [
        {
            "name": "Building",
            "id": "02fe41d6-b6a2-46a6-b4b1-b4e7156c0a68",
            "actions": [
                {
                    "name": "MouseLeftClick",
                    "type": "Button",
                    "id": "4127d1b0-e9ee-4306-9836-2d92b0294322",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap,SlowTap",
                    "initialStateCheck": true
                },
                {
                    "name": "MouseRightClick",
                    "type": "Button",
                    "id": "cead39c4-be9b-4498-9201-47d7a3c1402a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "99aba44e-5c6b-4837-b558-7d07fafc3e79",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "34e56ae8-9b30-4cb2-af0e-6857f4fe7bdf",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseLeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "56c763af-93f5-4883-a282-235625b9215e",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseRightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "07c2fff2-a136-4bb2-b006-aa6af3edc560",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}